Review comments updated

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -203,8 +203,7 @@
 			<!-- main -->
 			<div class="content">
 				<div class="main-header">
-					<h2>DASHBOARD</h2>
-					<em>the first priority information</em>
+					<h2>Activity Summary</h2>
 				</div>
 				<div class="main-content">
 					<div class="row">
@@ -212,7 +211,7 @@
 						<!-- WIDGET MAIN CHART WITH TABBED CONTENT -->
 						<div class="widget">
 							<div class="widget-header">
-								<h3><i class="fa fa-bar-chart-o"></i> Budget Stat</h3> <em>- Your Spent vs Social Spent</em>
+								<h3><i class="fa fa-bar-chart-o"></i> Spend</h3> <em>- Your Spend vs Peer Spend</em>
 								<button type="button" class="btn btn-link btn-help"><i class="fa fa-question-circle"></i></button>
 								<div class="btn-group widget-header-toolbar">
 									<a href="#" id="tour-focus" title="Focus" class="btn-borderless btn-focus"><i class="fa fa-eye"></i></a>
@@ -230,7 +229,8 @@
 										<li><a href="#year">Annually</a></li>
 									</ul>
 									<ul id="sales-stat-tab-right">
-										<li class="active"><a href="#city">City</a></li>
+										<li class="active"><a href="#city">Zip</a></li>
+										<li><a href="#county">City</a></li>
 										<li><a href="#county">County</a></li>
 										<li><a href="#state">State</a></li>
 										<li><a href="#country">Country</a></li>
@@ -389,7 +389,7 @@
 									<div class="panel panel-default">
 										<div class="panel-heading">
 											<h4 class="panel-title">
-												<a data-toggle="collapse" data-parent="#accordion2" href="#collapseOne2"><i class="fa fa-plus-square-o"></i><i class="fa fa-minus-square-o"></i> Wish List Suggestion</a>
+												<a data-toggle="collapse" data-parent="#accordion2" href="#collapseOne2"><i class="fa fa-plus-square-o"></i><i class="fa fa-minus-square-o"></i> Wish List Suggestions</a>
 											</h4>
 										</div>
 										<div id="collapseOne2" class="panel-collapse collapse in">
@@ -456,7 +456,7 @@
 							<!-- WIDGET TASKS -->
 							<div class="widget">
 								<div class="widget-header">
-									<h3><i class="fa fa-edit"></i> My Wish Lists</h3>
+									<h3><i class="fa fa-edit"></i> My Wish List</h3>
 									<div class="btn-group widget-header-toolbar">
 										<a href="#" title="Focus" class="btn-borderless btn-focus"><i class="fa fa-eye"></i></a>
 										<a href="#" title="Expand/Collapse" class="btn-borderless btn-toggle-expand"><i class="fa fa-chevron-up"></i></a>
@@ -468,7 +468,7 @@
 										<thead>
 											<tr>
 												<th>Category</th>
-												<th>keyword/Item</th>
+												<th>Keyword</th>
 											</tr>
 										</thead>
 										<tbody>
@@ -477,14 +477,14 @@
 												<td><a href="#" id="electronics" data-type="select2" data-pk="1" data-title="Enter tags">Television,Play Station</a></td>
 											</tr>
 											<tr>
-												<td><a href="#" class="categories" data-type="select2" data-pk="1" data-value="SP" data-title="Select category"></a></td>
+												<td><a href="#" class="categories" data-type="select2" data-pk="1" data-value="MS" data-title="Select category"></a></td>
 												<td>
-													<a href="#" id="sports" data-type="select2" data-pk="1" data-value="Rocket" data-title="Enter keywords"></a>
+													<a href="#" id="sports" data-type="select2" data-pk="1" data-value="Nike" data-title="Enter keywords"></a>
 												</td>
 											</tr>
 											<tr>
 												<td><a href="#" class="categories" data-type="select2" data-pk="1" data-value="RS" data-title="Select category"></a></td>
-												<td><a href="#" id="addnew" data-type="select2" data-pk="1" data-title="Enter tags"></a></td>
+												<td><a href="#" id="addnew" data-type="select2" data-pk="1" data-value="Japanese" data-title="Enter tags"></a></td>
 											</tr>
 										</tbody>
 									</table>
@@ -496,7 +496,7 @@
 							<!-- WIDGET TASKS -->
 							<div class="widget widget-scrolling">
 								<div class="widget-header">
-									<h3><i class="fa fa-slack"></i> Chat</h3>
+									<h3><i class="fa fa-slack"></i> Post</h3>
 									<div class="btn-group widget-header-toolbar">
 										<a href="#" title="Focus" class="btn-borderless btn-focus"><i class="fa fa-eye"></i></a>
 										<a href="#" title="Expand/Collapse" class="btn-borderless btn-toggle-expand"><i class="fa fa-chevron-up"></i></a>
@@ -506,7 +506,7 @@
 								<div class="widget-content">
 									<div class="heading clearfix">
 										<div class="pull-left">
-											<p><i class="fa fa-circle green-font online-icon"></i> jamesh</p>
+											<p><i class="fa fa-circle green-font online-icon"></i> ananymous</p>
 										</div>
 									</div>
 									<ul class="list-unstyled slack-messages">
@@ -516,7 +516,7 @@
 										<li>
 											<img src="assets/img/user1.png" alt="Avatar" class="img-circle pull-left avatar">
 											<div class="text clearfix">
-												<span class="username">you</span><span class="timestamp">4:36 PM</span>
+												<span class="username">ananymous</span><span class="timestamp">4:36 PM</span>
 												<p class="message">I can't find the suggested item online</p>
 											</div>
 										</li>
@@ -526,14 +526,14 @@
 										<li>
 											<img src="assets/img/user2.png" alt="Avatar" class="img-circle pull-left avatar">
 											<div class="text clearfix">
-												<span class="username">bond</span><span class="timestamp">9:03 AM</span>
+												<span class="username">ananymous</span><span class="timestamp">9:03 AM</span>
 												<p class="message">It's available only in-store at Fostercity</p>
 											</div>
 										</li>
 										<li>
 											<img src="assets/img/user1.png" alt="Avatar" class="img-circle pull-left avatar">
 											<div class="text clearfix">
-												<span class="username">you</span><span class="timestamp">9:03 AM</span>
+												<span class="username">ananymous</span><span class="timestamp">9:03 AM</span>
 												<p class="message">Thankyou</p>
 											</div>
 										</li>
