Review comment changes

--- a/WebContent/compare.html
+++ b/WebContent/compare.html
@@ -130,7 +130,7 @@
 						<!-- WIDGET VERTICAL BAR CHART  -->
 							<div class="widget">
 								<div class="widget-header">
-									<h3><i class="fa fa-bar-chart-o"></i>Your/Peer Spent</h3> <em> - how can you save?</em>
+									<h3><i class="fa fa-bar-chart-o"></i>Your Spend</h3> <em> - how can you save?</em>
 								</div>
 								<div class="widget-content">
 									<div class="demo-flot-chart" id="spent-compare-bar-chart" data-ctype="#week"></div>
@@ -143,7 +143,7 @@
 							<div class="widget">
 								<div class="widget-header">
 									<h3>
-										<i class="fa fa-bar-chart-o"></i> Your/Peer Visit
+										<i class="fa fa-bar-chart-o"></i> Peer Spend
 									</h3>
 									<em> - frequency of your shopping</em>
 								</div>
