--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -254,7 +254,7 @@
 									<!-- WIDGET DONUT AND PIE CHART -->
 									<div class="widget">
 										<div class="widget-header" id="categoryHeader">
-											<h3><i class="fa fa-truck"></i>My Top Categories</h3> <em>- based on Spent</em>
+											<h3><i class="fa fa-truck"></i>My Top Categories</h3> <em>- based on Spend</em>
 										</div>
 										<div class="widget-content">
 											<div class="demo-flot-chart" id="demo-donut-chart-category"></div>
@@ -289,7 +289,7 @@
 									<!-- WIDGET DONUT AND PIE CHART -->
 									<div class="widget">
 										<div class="widget-header" id="merchantHeader">
-											<h3><i class="fa fa-truck"></i>My Top Merchant</h3> <em>- based on Spent</em>
+											<h3><i class="fa fa-truck"></i>My Top Merchant</h3> <em>- based on Spend</em>
 										</div>
 										<div class="widget-content">
 											<div class="demo-flot-chart" id="demo-donut-chart-merchant"></div>
@@ -335,35 +335,35 @@
 								<div class="widget-content">
 									<ul class="task-list">
 										<li>
-											<p>APPAREL<span class="label label-text">$150 LEFT</span></p>
+											<p>Apparel<span class="label label-text">$150 Left</span></p>
 											<div class="progress custom-format">
 												<div class="progress-bar progress-bar-success" data-transitiongoal="50" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="200" style="width: 10%">
 												</div>
 											</div>
 										</li>
 										<li>
-											<p>RESTAURANT <span class="label label-text">$23 LEFT</span></p>
+											<p>Restaurant<span class="label label-text">$23 Left</span></p>
 											<div class="progress custom-format">
 												<div class="progress-bar progress-bar-danger" data-transitiongoal="77" role="progressbar" aria-valuenow="23" aria-valuemin="0" aria-valuemax="100" style="width:23%">
 												</div>
 											</div>
 										</li>
 										<li>
-											<p>AUTO <span class="label label-text">$80 LEFT</span></p>
+											<p>Auto<span class="label label-text">$80 Left</span></p>
 											<div class="progress custom-format">
 												<div class="progress-bar progress-bar-success" data-transitiongoal="10" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="90" style="width: 80%">
 												</div>
 											</div>
 										</li>
 										<li>
-											<p>GROCERY <span class="label label-text">$40 LEFT</span></p>
+											<p>Grocery<span class="label label-text">$40 Left</span></p>
 											<div class="progress custom-format">
 												<div class="progress-bar progress-bar-warning" data-transitiongoal="110" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="150" style="width: 100%">
 												</div>
 											</div>
 										</li>
 										<li>
-											<p>GAS <span class="label label-text">$40 LEFT</span></p>
+											<p>Gas<span class="label label-text">$40 Left</span></p>
 											<div class="progress custom-format">
 												<div class="progress-bar progress-bar-success" data-transitiongoal="30" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="70" style="width: 10%">
 												</div>
