--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -104,7 +104,7 @@
 								<div class="form-group">
 									<div class="col-sm-6"></div>
 									<div class="col-sm-6">
-										<a href="index.html">
+										<a href="dashboard.html">
 											<label class="btn btn-lg btn-block btn-custom-primary">Sign Up</label>
 										</a>
 									</div>
