Mobile App screen

--- a/WebContent/page-summary.html
+++ b/WebContent/page-summary.html
@@ -33,76 +33,11 @@
 </head>
 
 <body class="sidebar-fixed topnav-fixed ">
-	<!-- WRAPPER -->
-	<div id="wrapper" class="wrapper">
-		<!-- TOP BAR -->
-		<div class="top-bar navbar-fixed-top">
-			<div class="container"></div>
-			<!-- /container -->
-		</div>
-		<!-- END TOP BAR -->
-
-		<!-- MAIN CONTENT WRAPPER -->
-		<div id="main-content-wrapper" class="content-wrapper1">
-
-			<!-- main -->
-			<div class="content">
-				<div class="main-header">
-					<h2>Order Summary</h2>
-					<em> Order# 102-5266482-6665834</em>
-				</div>
-			</div>
-
-			<div class="invoice-from-to">
-				<div class="row">
-					<div class="col-lg-4"></div>
-					<div class="col-lg-3">
-						<span>Shipping Address</span>
-						<p class="name">Stacy Rose</p>
-						<address>
-							12345 North Main Street <br /> New York, 2233845 <br />
-							<div class="contact">
-								<p>
-									<span>Email:</span> email@example.com
-								</p>
-								<p>
-									<span>Phone:</span> (1800) 765 - 4321
-								</p>
-								<p>
-									<span>Fax:</span> (1800) 765 - 4322
-								</p>
-							</div>
-						</address>
-					</div>
-				</div>
-			</div>
-			<!-- end invoice address -->
-
-		<div>
-			<p>
-			
-			Delivered Sep 26, 2016
-			Your package was delivered.
-			Please look in your mailbox or wherever you typically get mail.
-			</p>
-		
-		</div>
-			<!-- /main -->
-
+	<div>
+		<div class="col-lg-3 col-print-3">
+			<img src="assets/img/myspend.png" alt="Logo" />
 		</div>
 	</div>
-	<!-- END WRAPPER -->
-
-	<!-- Javascript -->
-	<script src="assets/js/jquery/jquery-2.1.0.min.js"></script>
-	<script src="assets/js/bootstrap/bootstrap.js"></script>
-	<script src="assets/js/plugins/modernizr/modernizr.js"></script>
-	<script src="assets/js/plugins/bootstrap-tour/bootstrap-tour.custom.js"></script>
-	<script
-		src="assets/js/plugins/jquery-slimscroll/jquery.slimscroll.min.js"></script>
-	<script src="assets/js/king-common.js"></script>
-	<script src="demo-style-switcher/assets/js/deliswitch.js"></script>
-	<script src="assets/js/king-page.js"></script>
 </body>
 
 </html>
