Changes on compare page

--- a/WebContent/compare.html
+++ b/WebContent/compare.html
@@ -51,7 +51,7 @@
 						class="fa fa-bars"></i></a>
 					<!-- logo -->
 					<div class="pull-left left logo">
-						<a href="index.html"><img
+						<a href="dashboard.html"><img
 							src="assets/img/header-mpass-hero.svg" alt="Social Budget"
 							style="max-width: 159px; max-height: 43px;" /></a>
 						<h1 class="sr-only">Lasso</h1>
@@ -125,12 +125,54 @@
 					<em>Envy others</em>
 				</div>
 				<div class="main-content">
+				
+						<div class="row">
+				<div class="col-md-12">
+							<!-- SALES INFO SUMMARY -->
+							<div class="widget">
+								<div class="widget-header">
+									<h3><i class="fa fa-bar-chart-o"></i> My Recent Purchased Item</h3>
+									<div class="btn-group widget-header-toolbar">
+										<a href="#" title="Focus" class="btn-borderless btn-focus"><i class="fa fa-eye"></i></a>
+										<a href="#" title="Expand/Collapse" class="btn-borderless btn-toggle-expand"><i class="fa fa-chevron-up"></i></a>
+										<a href="#" title="Remove" class="btn-borderless btn-remove"><i class="fa fa-times"></i></a>
+									</div>
+								</div>
+								<div class="widget-content">
+									<div class="table-responsive">
+										<table class="table table">
+											<thead>
+												<tr>
+													<th>Date</th>
+													<th>Merchant Name</th>
+													<th>Location</th>
+													<th>Category</th>
+													<th>Amount</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td><a href="#">09/22/2016 15:40</a></td>
+													<td>Target</td>
+													<td>San Carlos</td>
+													<td>Groceries</td>
+													<td>$248</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+								</div>
+							</div>
+							<!-- END SALES INFO SUMMARY -->
+						</div>
+					</div>
+			
 					<div class="row">
 						<div class="col-md-6">
 						<!-- WIDGET VERTICAL BAR CHART  -->
 							<div class="widget">
 								<div class="widget-header">
-									<h3><i class="fa fa-bar-chart-o"></i>Your Spend</h3> <em> - how can you save?</em>
+									<h3><i class="fa fa-bar-chart-o"></i>My Spend</h3> <em> - how can you save?</em>
 								</div>
 								<div class="widget-content">
 									<div class="demo-flot-chart" id="spent-compare-bar-chart" data-ctype="#week"></div>
@@ -154,6 +196,8 @@
 							</div>
 						</div>
 
+					</div>
+					
 					</div>
 				</div>
 			</div>
