Added css for mobile page

--- a/WebContent/page-summary.html
+++ b/WebContent/page-summary.html
@@ -32,7 +32,7 @@
 <link rel="shortcut icon" href="assets/ico/favicon.png">
 </head>
 
-<body class="sidebar-fixed topnav-fixed ">
+<body  class="mobile sidebar-fixed topnav-fixed ">
 	<div>
 		<div class="col-lg-3 col-print-3">
 			<img src="assets/img/myspend.png" alt="Logo" />
