Notification and link changes

--- a/WebContent/compare.html
+++ b/WebContent/compare.html
@@ -66,18 +66,19 @@
 									<li class="notification-item general">
 										<div class="btn-group">
 											<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-												<i class="fa fa-bell"></i> <span class="circle"></span>
+												<i class="fa fa-bell"></i>
 											</a>
 											<ul class="dropdown-menu" role="menu">
-												<li class="notification-header"><em>You have 1
-														notifications</em></li>
-												<li><a href="#"> <i
-														class="fa fa-comment green-font"></i> <span class="text">New
-															comment on the blog post</span> <span class="timestamp">1
-															minute ago</span>
-												</a></li>
-												<li class="notification-footer"><a href="#">View
-														All Notifications</a></li>
+												<li class="notification-header">
+													<em>You have 1 new notification(s)</em>
+												</li>
+												<li>
+													<a href="compare.html">
+														<i class="fa fa-shopping-cart red-font"></i>
+														<span class="text">Purchase at Target</span>
+														<span class="timestamp">1 minute ago</span>
+													</a>
+												</li>
 											</ul>
 										</div>
 									</li>
