--- a/WebContent/page-summary.html
+++ b/WebContent/page-summary.html
@@ -35,9 +35,12 @@
 <body  class="mobile sidebar-fixed topnav-fixed ">
 	<div>
 		<div class="col-lg-3 col-print-3">
+		<a href="dashboard.html?notify=true">
 			<img src="assets/img/myspend.png" alt="Logo" />
+		</a>
 		</div>
 	</div>
+	
 </body>
 
 </html>
