Post and invoice updated

--- a/WebContent/dashboard.html
+++ b/WebContent/dashboard.html
@@ -378,7 +378,7 @@
 							<!-- WIDGET ACTIVITY FEED -->
 							<div class="widget widget-scrolling panel-group" id="accordion2">
 								<div class="widget-header">
-									<h3><i class="fa fa-fire"></i> Recommendations</h3>
+									<h3><i class="fa fa-info-circle"></i> Recommendations</h3>
 									<div class="btn-group widget-header-toolbar">
 										<a href="#" title="Focus" class="btn-borderless btn-focus"><i class="fa fa-eye"></i></a>
 										<a href="#" title="Expand/Collapse" class="btn-borderless btn-toggle-expand"><i class="fa fa-chevron-up"></i></a>
@@ -414,7 +414,7 @@
 												<a data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo2"><i class="fa fa-plus-square-o"></i><i class="fa fa-minus-square-o"></i> Customer Suggestions </a>
 											</h4>
 										</div>
-										<div id="collapseTwo2" class="panel-collapse collapse in">
+										<div id="collapseTwo2" class="panel-collapse collapse">
 											<div class="panel-body">
 												<ul class="list-unstyled activity-list">
 													<li>
@@ -426,7 +426,7 @@
 														<p>10 Customers are recommending Red Hot Chilli Pepper <span class="timestamp">4 minutes ago</span></p>
 													</li>
 												</ul>
-												<button type="button" class="btn btn-clean center-block"><i class="fa fa-refresh"></i> Load more</button>
+												<button type="button" class="btn btn-clean center-block"><i class="fa fa-refresh fa-spin"></i> Load more</button>
 											</div>
 										</div>
 									</div>
@@ -436,7 +436,7 @@
 												<a data-toggle="collapse" data-parent="#accordion2" href="#collapseThree2"><i class="fa fa-plus-square-o"></i><i class="fa fa-minus-square-o"></i> General Suggestions</a>
 											</h4>
 										</div>
-										<div id="collapseThree2" class="panel-collapse collapse in">
+										<div id="collapseThree2" class="panel-collapse collapse">
 											<div class="panel-body">
 												<ul class="list-unstyled activity-list">
 													<li>
@@ -444,7 +444,7 @@
 														<p>This is the time to upgrade to your shoes, as your last shoes purchase was two years back.<span class="timestamp">Sport's Authority</span></p>
 													</li>
 												</ul>
-												<button type="button" class="btn btn-clean center-block"><i class="fa fa-refresh"></i> Load more</button>
+												<button type="button" class="btn btn-clean center-block"><i class="fa fa-refresh fa-spin"></i> Load more</button>
 											</div>
 										</div>
 									</div>
@@ -517,25 +517,22 @@
 											<img src="assets/img/user1.png" alt="Avatar" class="img-circle pull-left avatar">
 											<div class="text clearfix">
 												<span class="username">ananymous</span><span class="timestamp">4:36 PM</span>
-												<p class="message">I can't find the suggested item online</p>
+												<p class="message">Fish Chilli is awesome in Red Hot Chilli Pepper at Redwood City</p>
 											</div>
 										</li>
 										<li class="day-separator">
 											<span>Today</span>
 										</li>
 										<li>
-											<img src="assets/img/user2.png" alt="Avatar" class="img-circle pull-left avatar">
-											<div class="text clearfix">
-												<span class="username">ananymous</span><span class="timestamp">9:03 AM</span>
-												<p class="message">It's available only in-store at Fostercity</p>
-											</div>
-										</li>
-										<li>
 											<img src="assets/img/user1.png" alt="Avatar" class="img-circle pull-left avatar">
 											<div class="text clearfix">
 												<span class="username">ananymous</span><span class="timestamp">9:03 AM</span>
-												<p class="message">Thankyou</p>
+												<p class="message">Store closing sale is going on in Sports Authority at Foster City</p>
 											</div>
+										</li>
+										<li>
+											<img src="assets/img/facebook.png" alt="Avatar" class="img-circle pull-left avatar">
+											<img src="assets/img/twitter.png" alt="Avatar" class="img-circle pull-left avatar">
 										</li>
 									</ul>
 									<textarea class="form-control textarea-chat" placeholder="Type a message" rows="1"></textarea>
